2010-04-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Snapshot 1.8.8-0.20100311
	- Added addons/loadMACintoDB.pl to rpm spec

	* pf/conf/pf-release: Version bump to 1.8.8dev (forgot to do earlier)

	* pf/lib/pf/ifoctetslog.pm, pf/lib/pf/locationlog.pm: Fixed a context
	issue with database queries related to mac history, switchport history
	and user bandwidth accounting. Also fixed a slight mistake with 
	ifoctet's db queries in general.

2010-03-31	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/db.pm: Database is now reconnecting on failed queries

	* pf/lib/pf/SNMP/ThreeCom/Switch_4200G.pm: Imported bugs and
	limitations section from parent (pf::SNMP::ThreeCom::SS4500).

2010-03-24      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/services.pm: PF now creates static routes to routed Vlans 
	when dhcpd is enabled in networks.conf. It used to be when named was 
	enabled.

2010-03-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Fix upgrade bug introduced in 1.8.5: Changed
	perl-Locale-gettext dependency to use the perl namespace version 
	perl(Locale-gettext). Fixes #931;
	http://www.packetfence.org/mantis/view.php?id=931

2010-03-11	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Snapshot 1.8.8-0.20100311

	* pf/lib/pf/pfcmd/graph.pm, pf/t/all.t, pf/t/graph.t: Fixed problem 
	introduced in the database improvements concerning graphs
	Added a test case to validate it

2010-03-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/accounting.pl, pf/addons/recovery.pl, pf/lib/pf/action.pm,
	pf/lib/pf/class.pm, pf/lib/pf/configfile.pm, pf/lib/pf/db.pm, 
	pf/lib/pf/ifoctetslog.pm, pf/lib/pf/iplog.pm, pf/lib/pf/locationlog.pm,
	pf/lib/pf/node.pm, pf/lib/pf/os.pm, pf/lib/pf/person.pm, 
	pf/lib/pf/pfcmd/dashboard.pm, pf/lib/pf/pfcmd/graph.pm, 
	pf/lib/pf/pfcmd/report.pm, pf/lib/pf/switchlocation.pm, 
	pf/lib/pf/traplog.pm, pf/lib/pf/trigger.pm, pf/lib/pf/useragent.pm, 